test/mutation_analysis/s0396_rotate_function/hafis/ablation_o3_r50/mutants/15/result.txt
./test/mutation_analysis/s0396_rotate_function/hafis/ablation_o3_r50/mutants/15/Solution.java:30: error: unreachable statement
        return max;
        ^
1 error
